// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- * * *
+ - - -

=====================================output=====================================
- ***

* ---

================================================================================
`;

exports[`simple.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
***

=====================================output=====================================
---

================================================================================
`;
